# auto

./: .gitignore  README.md  pyproject.toml
src/auto/: __about__.py  __init__.py  __main__.py  num_tokens_from_messages.py
tests/: config.ini.template  default_user_message.md  system_message.md
tests/working/: main.ipynb  test.py  test_backup.py
